# temporiki

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  mempalace.yaml  pyproject.toml
.temporiki/: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  idea-file.md  pyproject.toml
.temporiki/docs/superpowers/plans/: 2026-04-14-repo-growth-strategy.md
.temporiki/hooks/: auto-run-once.sh  obsidian-zero.sh  scheduler-install.sh  scheduler-uninstall.sh  session-launch.sh  session-start.sh  session-stop.sh
.temporiki/hooks/windows/: temporiki-auto-once.ps1
.temporiki/obsidian-plugin/: README.md  main.js  manifest.json
.temporiki/scripts/: bump_version.sh  check_version_guard.sh  release.sh  sync_readme_version.sh
.temporiki/temporiki_tools/: automation.py  cli.py  mempalace_chroma.py  mempalace_lite.py  obsidian_pack.py  onboarding.py  ops.py  schema.py  stale.py
.temporiki/tests/: test_automation.py  test_cli.py  test_hybrid_search.py  test_mempalace_chroma.py  test_mempalace_router.py  test_obsidian_pack.py  test_onboarding.py  test_ops.py  test_schema_autofix.py  test_stale.py
hooks/: obsidian-zero.sh  session-launch.sh  session-start.sh  session-stop.sh
memoriki_tools/: __init__.py  automation.py  cli.py  mempalace_chroma.py  mempalace_lite.py  mempalace_router.py  ops.py
scripts/: bump_version.sh  check_version_guard.sh  release.sh
temporiki_tools/: __init__.py  automation.py  cli.py  mempalace_chroma.py  mempalace_lite.py  mempalace_router.py  onboarding.py
tests/: test_automation.py  test_ops.py  (+6 more)
(+17 files in other folders)
