[project]
name = "temporiki-tools"
version = "0.1.3"
description = "UV-native utilities for Temporiki workflows"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
mempalace = [
  "mempalace>=0.1.0",
]
chroma-client = [
  "chromadb-client>=1.5.7",
]

[project.scripts]
temporiki = "temporiki_tools.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["temporiki_tools"]
